tests/baselines/reference/parserErrorRecovery_ClassElement1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ClassElements/parserErrorRecovery_ClassElement1.ts(5,1): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ClassElements/parserErrorRecovery_ClassElement1.ts (1 errors) ====
    class C {
    
    // Classes can't be nested.  So we should bail out of parsing here and recover
    // this as a source unit element.
    class D {
    ~~~~~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
    }